# starkzap-rs

./: .env.example  Cargo.toml  README.md  build.rs
codegen/presets/: tokens.json  validators.json
examples/: basic_transfer.rs  cartridge_signer.rs  paymaster_transfer.rs  paymaster_transfers.rs  privy_signer.rs  staking_flow.rs
examples/cartridge_session_web/: cartridge_execute.mjs  index.html  main.js  package-lock.json  package.json  vite.config.js
src/: account.rs  amount.rs  error.rs  lib.rs  network.rs  paymaster.rs  sdk.rs  tokens.rs  tx.rs  wallet.rs
src/signer/: cartridge_signer.rs  mod.rs  privy_signer.rs  stark_signer.rs
src/staking/: discovery.rs  mod.rs  pool.rs  presets.rs  rewards.rs
tests/: integration_tests.rs  mainnet_lbtc_live.rs  mainnet_live.rs  mainnet_wbtc_live.rs
